--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
     },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-59T5MH0G\\SQLEXPRESS;Database=TodoList;Trusted_Connection=True;"
+    "DefaultConnection": "Server=LAPTOP-59T5MH0G\\SQLEXPRESS;Database=TodoList;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
