setting up identity and adding authorization token. added a login page and a register page. worked on users controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=LAPTOP-59T5MH0G\\SQLEXPRESS;Database=TodoList;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+  },
+  "TokenKey":  "super secret key"
 }
